Update workspace proxy to handle bala uri scheme